Use XXX.sh as the content of the dummy package

--- a/brokenness/Makefile
+++ b/brokenness/Makefile
@@ -1,2 +1,10 @@
-XXX-0-0.noarch.rpm: XXX.spec
-	: TODO
+XXX-0-0.noarch.rpm: XXX.spec XXX.sh
+	mkdir -p build/{SPECS,RPMS,BUILD,SRPMS,SOURCES}
+	cp -f XXX.sh build/SOURCES
+	cp -f $< build/SPECS
+	rpmbuild --define "_topdir `pwd`/build" -bb $<
+	cp build/RPMS/noarch/XXX-0-0.noarch.rpm .
+
+clean:
+	/bin/rm -rf build
+	rm -f XXX-0-0.noarch.rpm
