--- a/brokenness/Makefile
+++ b/brokenness/Makefile
@@ -1,6 +1,6 @@
-XXX-0-0.noarch.rpm: XXX.spec XXX.sh
+XXX-0-0.noarch.rpm: XXX.spec XXX
 	mkdir -p build/{SPECS,RPMS,BUILD,SRPMS,SOURCES}
-	cp -f XXX.sh build/SOURCES
+	cp -f XXX build/SOURCES
 	cp -f $< build/SPECS
 	rpmbuild --define "_topdir `pwd`/build" -bb $<
 	cp build/RPMS/noarch/XXX-0-0.noarch.rpm .
